@@ -34,6 +34,6 @@ jobs:
     - uses: actions/checkout@v4
     - name: run xmllint
       run: |
-        find libsel4 -name "sel4*.xml" | \
+        find libsel4 -name "object-api*.xml" | \
         xargs xmllint --schema libsel4/tools/sel4_idl.xsd --noout
         xmllint --schema libsel4/include/api/syscall.xsd --noout libsel4/include/api/syscall.xml
