@@ -54,17 +54,22 @@ add_config_library(sel4 "${configure_string}")
 # Currently we use autoconf.h, so generate one of those
 generate_autoconf(sel4_autoconf "kernel;sel4")
 
-gen_invocation_header(OUTPUT include/sel4/invocation.h XML include/interfaces/sel4.xml LIBSEL4)
+gen_invocation_header(
+    OUTPUT include/sel4/invocation.h
+    XML include/interfaces/object-api.xml
+    LIBSEL4
+)
 
 gen_invocation_header(
     OUTPUT sel4_arch_include/${KernelSel4Arch}/sel4/sel4_arch/invocation.h
-    XML "${CMAKE_CURRENT_SOURCE_DIR}/sel4_arch_include/${KernelSel4Arch}/interfaces/sel4arch.xml"
+    XML
+        "${CMAKE_CURRENT_SOURCE_DIR}/sel4_arch_include/${KernelSel4Arch}/interfaces/object-api-sel4-arch.xml"
     LIBSEL4 SEL4ARCH
 )
 
 gen_invocation_header(
     OUTPUT arch_include/${KernelArch}/sel4/arch/invocation.h
-    XML "${CMAKE_CURRENT_SOURCE_DIR}/arch_include/${KernelArch}/interfaces/sel4arch.xml"
+    XML "${CMAKE_CURRENT_SOURCE_DIR}/arch_include/${KernelArch}/interfaces/object-api-arch.xml"
     LIBSEL4 ARCH
 )
 
@@ -142,9 +147,9 @@ add_custom_command(
 
 set(
     interface_xmls
-    "${CMAKE_CURRENT_SOURCE_DIR}/sel4_arch_include/${KernelSel4Arch}/interfaces/sel4arch.xml"
-    "${CMAKE_CURRENT_SOURCE_DIR}/arch_include/${KernelArch}/interfaces/sel4arch.xml"
-    "${CMAKE_CURRENT_SOURCE_DIR}/include/interfaces/sel4.xml"
+    "${CMAKE_CURRENT_SOURCE_DIR}/sel4_arch_include/${KernelSel4Arch}/interfaces/object-api-sel4-arch.xml"
+    "${CMAKE_CURRENT_SOURCE_DIR}/arch_include/${KernelArch}/interfaces/object-api-arch.xml"
+    "${CMAKE_CURRENT_SOURCE_DIR}/include/interfaces/object-api.xml"
 )
 
 add_custom_command(
