@@ -162,14 +162,14 @@ ${GeneratedMarkdownDir}/%.md: ${DoxygenXml}/group__%.xml Makefile
 generated-markdown: $(addsuffix .md, $(addprefix ${GeneratedMarkdownDir}/, ${SYSCALLS} ${OBJECTS}))
 
 # Generate object invocation prototypes
-${Stage}/group_defs.h: ${Libsel4Dir}/include/interfaces/sel4.xml \
-                       ${Libsel4Dir}/arch_include/x86/interfaces/sel4arch.xml \
-                       ${Libsel4Dir}/arch_include/arm/interfaces/sel4arch.xml \
-                       ${Libsel4Dir}/sel4_arch_include/aarch32/interfaces/sel4arch.xml \
-                       ${Libsel4Dir}/sel4_arch_include/aarch64/interfaces/sel4arch.xml \
-                       ${Libsel4Dir}/sel4_arch_include/ia32/interfaces/sel4arch.xml \
-                       ${Libsel4Dir}/sel4_arch_include/x86_64/interfaces/sel4arch.xml \
-                       ${Libsel4Dir}/arch_include/riscv/interfaces/sel4arch.xml
+${Stage}/group_defs.h: ${Libsel4Dir}/include/interfaces/object-api.xml \
+                       ${Libsel4Dir}/arch_include/x86/interfaces/object-api-arch.xml \
+                       ${Libsel4Dir}/arch_include/arm/interfaces/object-api-arch.xml \
+                       ${Libsel4Dir}/sel4_arch_include/aarch32/interfaces/object-api-sel4-arch.xml \
+                       ${Libsel4Dir}/sel4_arch_include/aarch64/interfaces/object-api-sel4-arch.xml \
+                       ${Libsel4Dir}/sel4_arch_include/ia32/interfaces/object-api-sel4-arch.xml \
+                       ${Libsel4Dir}/sel4_arch_include/x86_64/interfaces/object-api-sel4-arch.xml \
+                       ${Libsel4Dir}/arch_include/riscv/interfaces/object-api-arch.xml
 	@echo "====> Generating documented object invocation header"
 	${Q}${PYTHON} ${GenerateObjectInvocationTool} --dtd ${InterfaceDtd} --output ${Stage} $^
 
