@@ -89,6 +89,10 @@ Upcoming release: BREAKING
   Note that the initial value for new seL4_ARM_VCPUs for this register is 0 which isn't a legal value for MPIDR_EL1 on
   AArch64. It may be necessary for the register to be explicitly initialized by user level before launching a thread
   associated with the new seL4_ARM_VCPU.
+* Rename object interface files `include/interfaces/sel4.xml`, `arch_include/*/interfaces/sel4arch.xml`, and
+  `sel4_arch_include/*/interfaces/sel4arch.xml` to `include/interfaces/object-api.xml`,
+  `arch_include/*/interfaces/object-api-arch.xml`, and `sel4_arch_include/*/interfaces/object-api-sel4-arch.xml`,
+  respectively.
 
 ## Upgrade Notes
 
